--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,14 @@ android {
 }
 
 dependencies {
+    implementation ("com.guolindev.permissionx:permissionx:1.7.1")
     implementation libs.circleimageview
     implementation libs.volley
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.play.services.location
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
