--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28"/>
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,7 +21,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Jhansi"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        tools:ignore="MissingClass">
+        <activity
+            android:name=".PaymentGateway"
+            android:exported="false" />
+        <activity
+            android:name=".DashBord"
+            android:exported="false" />
         <activity
             android:name=".PrintReceptScreen"
             android:exported="false" />
@@ -28,9 +38,9 @@
         <activity
             android:name=".PaymentDropdownactivty"
             android:exported="false" />
-        <activity
-            android:name=".DetailsShowActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".DetailsShowActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".SearchDetails"
             android:exported="false" />
@@ -46,15 +56,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.jhansi.fileprovider"
-            android:grantUriPermissions="true"
-            android:exported="false">
+            android:exported="false"
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
-        </provider>
+        </provider> <!-- Razorpay Activity -->
+        <activity android:name="com.razorpay.CheckoutActivity" />
     </application>
 
 </manifest>
